hphp/hack/test/typecheck/inout/bad_inout_use_arg12.php
<?hh

function f(inout int $i): void {}

function test(): void {
  $x = Vector { 3, 42 };
  f(inout $x[1]);
}
